[sonar][issues-services][V01]: se corrigen las issues de los paquetes service.
[calegria]
Se realiza un prueba general para descartar errores funcionales.